--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon --exec babel-node src/index.js -r node_modules/dotenv/config",
+    "clean": "rm -rf build && mkdir build",
+    "build-server": "babel -d ./build ./src -s -r node_modules/dotenv/config",
+    "build": "npm run clean && npm run build-server",
     "test": "echo \"No test specified\" && exit 0"
   },
   "author": "",
@@ -17,6 +20,7 @@
     "uuid": "^3.3.2"
   },
   "devDependencies": {
+    "@babel/cli": "^7.4.4",
     "@babel/core": "^7.1.6",
     "@babel/node": "^7.0.0",
     "@babel/preset-env": "^7.1.6",
